test/invalid-syntax/58250_invalid_lexical/58250_invalid_lexical.agu
-- Author: 58250, Leonardo Monteiro
let a : Int = 17@